--- a/NeoPay.csproj
+++ b/NeoPay.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Folder Include="Constants\" />
   </ItemGroup>
 
 </Project>
