exclude designs folder from project;

--- a/NeoPay.csproj
+++ b/NeoPay.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="project_brief\**" />
+    <Content Remove="project_brief\**" />
+    <EmbeddedResource Remove="project_brief\**" />
+    <None Remove="project_brief\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Constants\" />
   </ItemGroup>
 
