--- a/NeoPay.Presentation/NeoPay.Presentation.csproj
+++ b/NeoPay.Presentation/NeoPay.Presentation.csproj
@@ -5,10 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="project_brief\**" />
-    <Content Remove="project_brief\**" />
-    <EmbeddedResource Remove="project_brief\**" />
-    <None Remove="project_brief\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -26,6 +22,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NeoPay.Service\NeoPay.Service.csproj" />
   </ItemGroup>
 
 </Project>
