add connection string; some refactoring;

--- a/NeoPay.Presentation/appsettings.json
+++ b/NeoPay.Presentation/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Data Source=(LocalDb)\test;Integrated Security=SSPI;Initial Catalog=NeoPay"
+    "Default": "Data Source=DESKTOP-RQNN9K6\\SQLEXPRESS;Initial Catalog=NeoPay;Integrated Security=True"
   }
 }
