add JWT; update user auth models; some refactoring;

--- a/NeoPay.Presentation/appsettings.json
+++ b/NeoPay.Presentation/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=DESKTOP-RQNN9K6\\SQLEXPRESS;Initial Catalog=NeoPay;Integrated Security=True"
+  },
+  "Jwt": {
+    "Key": "SpecialTopSecretCypherKey",
+    "Issuer": "www.neopay.duckdns.org",
+    "Audience": "https://localhost:44332/",
+    "DurationMinutes":  "60"
   }
 }
