--- a/NeoPay.Presentation/appsettings.Development.json
+++ b/NeoPay.Presentation/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "clientUrl":  "http://localhost:4200"
 }
