alter InvoiceDate dataType to date;

--- a/NeoPay.Presentation/NeoPay.Presentation.csproj
+++ b/NeoPay.Presentation/NeoPay.Presentation.csproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Constants\" />
+    <Compile Remove="Constants\**" />
+    <Content Remove="Constants\**" />
+    <EmbeddedResource Remove="Constants\**" />
+    <None Remove="Constants\**" />
   </ItemGroup>
 
   <ItemGroup>
