mostly complete backend refreshToken feat;

--- a/NeoPay.Presentation/appsettings.json
+++ b/NeoPay.Presentation/appsettings.json
@@ -13,6 +13,7 @@
   "Jwt": {
     "Issuer": "www.neopay.duckdns.org",
     "Audience": "https://localhost:44332/",
-    "DurationMinutes":  "30"
+    "DurationMinutes": "60",
+    "RefreshTokenDbTTLDays":  "2"
   }
 }
